refactor: create only one method for get user task with pagination and filter
